--- a/addons/point_of_sale/views/pos_order_view.xml
+++ b/addons/point_of_sale/views/pos_order_view.xml
@@ -40,7 +40,7 @@
                                 <field name="price_unit" widget="monetary"/>
                                 <field name="discount"/>
                                 <field name="tax_ids_after_fiscal_position" widget="many2many_tags" string="Taxes"/>
-                                <field name="tax_ids" widget="many2many_tags" invisible="1"/>
+                                <field name="tax_ids" widget="many2many_tags" invisible="1" force_save="1"/>
                                 <field name="price_subtotal" widget="monetary" force_save="1"/>
                                 <field name="price_subtotal_incl" widget="monetary" force_save="1"/>
                             </tree>
